<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/choose_lang"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:visibility="visible"
         />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/english_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/english"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/arabic_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/arabic"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@+id/dialog_negative_btn"
            android:background="@drawable/btn_sand_bg"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/Ok"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
             />

        <TextView
            android:id="@+id/dialog_positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/dialog_titile"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_toLeftOf="@+id/dialog_negative_btn"
            android:background="@drawable/btn_sand_bg"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            />
    </LinearLayout>
</RelativeLayout>
