<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="#00000000"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:fitsSystemWindows="true"
        android:titleTextColor="@color/white"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/app_logo"
            android:layout_width="200dp"
            android:layout_height="@dimen/_55sdp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_app_logo_icon"
            tools:ignore="VectorDrawableCompat" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/login_lo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginLeft="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginRight="@dimen/_32sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/email_add_edt"
android:layout_gravity="center"
            android:gravity="left|center"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/email_id"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/pwd_edt"
         android:layout_gravity="center"
            android:gravity="left|center"
            android:padding="@dimen/_5sdp"
            android:hint="@string/pwd"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="none|text|textNoSuggestions|textPassword"
            android:textCursorDrawable="@null"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_18sdp"
            android:paddingBottom="@dimen/_18sdp">

            <TextView
                android:id="@+id/forgot_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/forgot_pwd"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_14sdp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toEndOf="@+id/forgot_txt"
                android:layout_toRightOf="@+id/forgot_txt"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reset_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    />
            </LinearLayout>
        </LinearLayout>
<LinearLayout
    android:id="@+id/loginll"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:background="@drawable/btn_rounded_corner_gray"
    android:layout_gravity="center"
    android:gravity="center">
        <TextView
            android:id="@+id/login_btn"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
          android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in"

            android:textSize="@dimen/_18sdp"
            />
</LinearLayout>
        <TextView
            android:id="@+id/note_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:paddingTop="15dp"
            android:text="@string/note_txt"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14sdp"
            android:visibility="invisible"
         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/socelLogin"
        android:gravity="center_horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/or_login"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14sdp"
           />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/socelLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip_lo"
        android:layout_gravity="center_horizontal"

        android:gravity="bottom|center_vertical|center_horizontal|center"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/google_plus_img"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:clickable="false"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/facebook_img"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/facbook" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/skip_lo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@color/sand"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/skip_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

   <!-- <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone" />-->
</RelativeLayout>
