<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="#00000000"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:fitsSystemWindows="true"
        android:titleTextColor="@color/white"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/app_logo"
            android:layout_width="200dp"
            android:layout_height="@dimen/_55sdp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_app_logo_icon"
            tools:ignore="VectorDrawableCompat" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/login_lo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/avenir_next_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/text_black_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/text_black_color"
            android:fontFamily="@font/avenir_next_regular"
            android:gravity="center_vertical"
            android:hint="@string/email_address"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/text_black_color"
            android:textSize="14sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/text_black_color"
            android:fontFamily="@font/avenir_next_regular"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/text_black_color"
            android:textSize="14sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_18sdp"
            android:paddingBottom="@dimen/_18sdp">

            <TextView
                android:id="@+id/forgotPasswordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/avenir_next_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/text_black_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resetTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/avenir_next_regular"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/text_black_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/brown_btn_bg"
            android:fontFamily="@font/avenir_next_regular"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/note_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:paddingTop="15dp"
            android:text="@string/note_txt"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/_14sdp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/avenir_next_regular"
            android:text="@string/or_login"
            android:textAllCaps="false"
            android:textColor="@color/text_grey_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google_plus_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/facebook_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/facbook" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
