<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_reg_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="@dimen/_55sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_app_logo_icon"
            tools:ignore="VectorDrawableCompat" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/white_btn_bg"
            android:fontFamily="@font/avenir_next_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/white_btn_bg"
            android:fontFamily="@font/avenir_next_regular"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/avenir_next_regular"
            android:text="@string/or_login"
            android:textAllCaps="false"
            android:textColor="@color/text_grey_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google_plus_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/facebook_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/facbook" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@color/sand"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/text_black_color"
        android:textSize="16sp"
        android:textStyle="bold" />

   <!-- <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone" />-->
</RelativeLayout>
